<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Main!</string>
    <string name="app_name">RBM Remote Filter</string>
    
    <string name="verstion_name_label">Version Name:</string>
    <string name="verstion_code_label">Version Code:</string>
    
    <string name="remote_filter_action" >Action</string>
    <string name="remote_filter_level" >Level</string>
    <string name="remote_filter_tag" >Tag</string>
    <string name="remote_filter_msg" >Message</string>
    
    <string name="remote_filter_edit_title">Edit Control Panel</string>
    
    <string name="remote_filter_edit_selection">Selection</string>
    <string name="remote_filter_edit_selection_all">All</string>
    <string name="remote_filter_edit_selection_none">None</string>
    <string name="remote_filter_edit_selection_invert">Invert</string>
    
    <string name="remote_filter_edit_order">Order</string>
    <string name="remote_filter_edit_order_up">Up</string>
    <string name="remote_filter_edit_order_down">Down</string>
    <string name="remote_filter_edit_order_first">First</string>
    <string name="remote_filter_edit_order_last">Last</string>    
    
    <string name="remote_filter_edit_values">Values</string>
    <string name="remote_filter_edit_values_edit">Edit</string>    
    <string name="remote_filter_edit_values_add">Add</string> 
    <string name="remote_filter_edit_values_delete">Delete</string>   
    
    <string name="remote_filter_edit_values_action">Action</string>
    <string name="remote_filter_edit_values_level">Level</string>
    <string name="remote_filter_edit_values_tag">Tag</string>
    <string name="remote_filter_edit_values_msg">Message</string>
    
    
</resources>
