<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"	
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
		
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" 
		android:padding="@dimen/medium">
		
		<LinearLayout 
			android:layout_width="fill_parent"			
			android:layout_height="wrap_content">
			 
			<TextView 
				android:layout_width="wrap_content"				
				android:layout_height="wrap_content" 
				android:text="@string/remote_filter_edit_values_action" /> 
			
			<Spinner
				android:layout_width="fill_parent"			
				android:layout_height="wrap_content"
				/>
			 
		</LinearLayout>			
		
		<LinearLayout 
			android:layout_width="fill_parent"			
			android:layout_height="wrap_content">
			 
			<TextView 
				android:layout_width="wrap_content"			
				android:layout_height="wrap_content" 
				android:text="@string/remote_filter_edit_values_level" /> 
			
			<Spinner
				android:layout_width="fill_parent"			
				android:layout_height="wrap_content"
				/>
			 
		</LinearLayout>			
		
		<LinearLayout 
			android:layout_width="fill_parent"			
			android:layout_height="wrap_content">
			 
			<TextView 
				android:layout_width="wrap_content"			
				android:layout_height="wrap_content" 
				android:text="@string/remote_filter_edit_values_tag" /> 
			
			<EditText
				android:layout_width="fill_parent"			
				android:layout_height="wrap_content"
				/>
			 
		</LinearLayout>
		
		<LinearLayout 
			android:layout_width="fill_parent"			
			android:layout_height="wrap_content">
			 
			<TextView 
				android:layout_width="wrap_content"			
				android:layout_height="wrap_content" 
				android:text="@string/remote_filter_edit_values_msg" /> 
			
			<EditText
				android:layout_width="fill_parent"			
				android:layout_height="wrap_content"
				/>
			 
		</LinearLayout>
	
	</LinearLayout>		
				    
</LinearLayout>
